<resources>
    <string name="app_name">焦点效率</string>
    <!--首页-->
    <string name="project_dynamics">项目动态</string>
    <string name="building_project">楼盘项目</string>
    <string name="my_sub">我的下属</string>

    <!--列表-->
    <string name="load_more">正在加载更多</string>
    <string name="search_building">搜索楼盘</string>
    <string name="net_error">网络错误,点击重试</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="me_center">个人中心</string>
    <string name="exit_login">退出登录</string>
    <string name="publish">发布</string>
    <string name="select_project">选择项目</string>
    <string name="dynamic_type">动态类型</string>
    <string name="select_client">选择客户</string>
    <string name="add_note">填写备注</string>
    <string name="add_photo">添加照片</string>
    <string name="empty_project">无楼盘项目</string>
    <string name="project_please_search"></string>
    <string name="empty_dynamic">暂无动态</string>
    <string name="empty_search_project">暂无符合条件的楼盘项目</string>
    <string name="empty_sub">暂无下属</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册</string>
    <string name="publish_dynamics">发布动态</string>
    <string name="manager_info">负责人信息</string>
</resources>
