<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <ImageView
            android:id="@+id/add_progress_back"
            android:layout_width="20dp"
            android:layout_height="22dp"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:paddingBottom="2dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2dp"
            android:src="@drawable/ico_arrow_left_blue" />

        <TextView
            android:id="@+id/add_progress_title"
            style="@style/activity_title"
            android:text="@string/publish_dynamics" />

        <TextView
            android:id="@+id/progress_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="4dp"
            android:text="@string/publish"
            android:textColor="@color/standard_text_light_gray"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/standard_line_light" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_select_project"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/select_project"
            android:textColor="@color/standard_text_light_gray"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/select_project_go"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ico_arrow_right" />

        <TextView
            android:id="@+id/add_show_project"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/select_project_go"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/standard_text_light_black"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/standard_line_light" />

    <RelativeLayout
        android:id="@+id/add_select_progress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/dynamic_type"
            android:textColor="@color/standard_text_light_gray"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/select_progress_go"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ico_arrow_right" />

        <TextView
            android:id="@+id/add_show_progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/select_progress_go"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/standard_text_light_black"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/standard_line_light" />

    <RelativeLayout
        android:id="@+id/add_select_client"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/select_client"
            android:textColor="@color/standard_text_light_gray"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/select_client_go"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ico_arrow_right" />

        <TextView
            android:id="@+id/add_show_client"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/select_client_go"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/standard_text_light_black"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/standard_line_light"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/add_select_invest"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="投放金额"
            android:textColor="@color/standard_text_light_gray"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/add_select_go"
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ico_arrow_right" />

        <TextView
            android:id="@+id/add_invest_show"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/add_select_go"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/standard_text_light_black"
            android:textSize="16sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/standard_background_f5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:textColor="@color/standard_text_light_gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/add_progress_note_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="300"
            android:textColor="@color/standard_text_light_gray"
            android:textSize="14sp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/add_progress_note"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@null"
        android:gravity="left"
        android:lineSpacingExtra="3dp"
        android:maxLength="300"
        android:padding="15dp"
        android:textColor="@color/standard_text_light_black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/standard_background_f5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_photo"
        android:textColor="@color/standard_text_light_gray"
        android:textSize="16sp" />

    <com.sohu.focus.salesmaster.uiframe.easyrecyclerview.EasyRecyclerView
        android:id="@+id/add_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

</LinearLayout>